--- a/src/components/shared/AppNav/index.scss
+++ b/src/components/shared/AppNav/index.scss
@@ -4,17 +4,14 @@
 @import 'styles/mixins/';
 
 .app-nav {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: var(--gray200);
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-grow: 1;
+
+  background-color: var(--gray200);
+  background: radial-gradient(140% 95% at 50% 47%, #fff 0%, #e4e8eb 100%);
 }
 
 .app-nav__list {
